--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^4.0.0-beta.1"
   },
-  "main": "index.js"
+  "main": "index.js",
+  "resolutions": {
+    "**/node-fetch": "2.6.1"
+  }
 }
